# bevy_mandelbrot

./: '  .gitignore  2  Cargo.toml  README.md  export_macos.sh  pancam.rs
.xwin-cache/dl/: Microsoft.VC.14.37.17.7.CRT.Headers.base.vsix  Win11SDK_10.0.22621_headers.msi  Win11SDK_10.0.22621_libs_x86_64.msi  Win11SDK_10.0.22621_store_headers.msi  Win11SDK_10.0.22621_store_libs.msi  Win11SDK_10.0.22621_x64_headers.msi
.xwin-cache/unpack/Microsoft.VC.14.37.17.7.CRT.Headers.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.37.17.7.CRT.x64.Desktop.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.37.17.7.CRT.x64.Desktop.base.vsix/lib/x64/: libompd.lib  libvcruntimed.lib  msvcmrtd.lib  msvcmrtd_netcore.lib
.xwin-cache/unpack/Microsoft.VC.14.37.17.7.CRT.x64.Store.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.37.17.7.CRT.x64.Store.base.vsix/lib/x64/: comsuppd.lib  comsuppwd.lib  concrtd.lib  ptrustmd.lib  vccorlibd.lib  (+2 more)
.xwin-cache/unpack/Win11SDK_10.0.22621_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_store_libs.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_x64_headers.msi/: tree.txt
.xwin-cache/unpack/ucrt.msi/: tree.txt
assets/shaders/: basic_fragment.wgsl  basic_vertex.wgsl  burning_ship_fragment.wgsl  julia_fragment.wgsl  mandelbrot.frag  mandelbrot_fragment.wgsl  mandelbrot_vertex.wgsl
exports/linux/assets/shaders/: julia_fragment.wgsl  mandelbrot_fragment.wgsl
exports/macos/: dmg.sh
exports/macos/RustyMandelbrot.app/Contents/: Info.plist
exports/windows/assets/shaders/: burning_ship_fragment.wgsl
src/: audio.rs  burning_ship_material.rs  chunks.rs  fractals.rs  julia_material.rs  main.rs  mandelbrot_material.rs  materials.rs  pancam.rs  prelude.rs  ui.rs
(+91 files in other folders)
