[package]
name = "bevy_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audioviz = "0.6.0"
bevy = { version = "0.11.3", features = ["wayland", "bevy_render", "flac"]}
bevy-inspector-egui = "0.20.0"
bevy_egui = {version = "0.22.0", features = ["immutable_ctx"]}
wgpu = "0.17.1"
