[package]
name = "bevy_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#audioviz = "0.6.0"
bevy = { version = "0.12.0", features = ["wayland", "bevy_render", "flac", "bevy_asset"]}
#bevy-inspector-egui = "0.20.0"
bevy_asset = "0.12.0"
#bevy_egui = {version = "0.22.0", features = ["immutable_ctx"]}
wgpu = "0.18.0"

[package.metadata.android]
package = "org.fractalviewer.example"
apk_name = "fractalviewer"
assets = "../../assets"
resources = "../../assets/android-res"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Bevy Fractal Viewer"