[package]
name = "bevy_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["wayland", "bevy_render", "flac", "bevy_asset"]}
bevy-inspector-egui = "0.20.0"
bevy_asset = "0.12.0"
bevy_egui = {version = "0.23.0", features = ["immutable_ctx"]}
wgpu = "0.18.0"
